Fixing z-index on navigation to draw it in front of other body elements.

--- a/src/uosinterface/webapp/static/css/navigation.css
+++ b/src/uosinterface/webapp/static/css/navigation.css
@@ -10,6 +10,7 @@
   font-family: sans-serif;
   text-align: center;
   transition: 0.3s;
+  z-index: 3;
 }
 
 .nav-container {
